--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,12 @@ set(APP_HUMAN_NAME "Music Formatter (C++)")
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+option(BUILD_CLI "Build CLI executable" ON)
+option(BUILD_GUI "Build GUI executable" ON)
+
 find_package(TagLib REQUIRED)
 find_package(spdlog REQUIRED)
-find_package(PkgConfig REQUIRED)
 find_package(Catch2)
-
-pkg_check_modules(GTKMM REQUIRED IMPORTED_TARGET gtkmm-4.0)
 
 file(GLOB UI_SOURCES "src/ui/*.cpp")
 file(GLOB MODEL_SOURCES "src/model/*.cpp")
@@ -38,36 +38,50 @@ if(Catch2_FOUND)
     include(Catch)
 
     catch_discover_tests(model_tests)
+else(Catch2_FOUND)
+    message("Catch2 was not found. Skipping tests")
 endif(Catch2_FOUND)
 
-add_executable(music_formatter_cli src/main.cpp ${MODEL_SOURCES})
+if(BUILD_CLI)
+    find_package(argparse REQUIRED)
 
-set_target_properties(music_formatter_cli PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/dbg/cli"
-    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/build/cli"
-    OUTPUT_NAME "music_formatter_cli_${PROJECT_VERSION}"
-)
+    message("Building cli program")
+    add_executable(music_formatter_cli src/main.cpp ${MODEL_SOURCES})
 
-target_link_libraries(music_formatter_cli 
-    PRIVATE
-        spdlog::spdlog
-        TagLib::TagLib
-)
+    set_target_properties(music_formatter_cli PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/dbg/cli"
+        RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/build/cli"
+        OUTPUT_NAME "music_formatter_cli_${PROJECT_VERSION}"
+    )
 
-add_executable(music_formatter src/ui/ui_main.cpp 
-    ${UI_SOURCES}
-    ${MODEL_SOURCES}
-)
+    target_link_libraries(music_formatter_cli 
+        PRIVATE
+            spdlog::spdlog
+            TagLib::TagLib
+            argparse::argparse
+    )
+endif(BUILD_CLI)
 
-set_target_properties(music_formatter PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/dbg/gui"
-    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/build/gui"
-    OUTPUT_NAME "music_formatter_cli_${PROJECT_VERSION}"
-)
+if(BUILD_GUI)
+    message("Building GUI program")
+    find_package(PkgConfig REQUIRED)
+    pkg_check_modules(GTKMM REQUIRED IMPORTED_TARGET gtkmm-4.0)
 
-target_link_libraries(music_formatter 
-    PRIVATE
-        PkgConfig::GTKMM
-        spdlog::spdlog
-        TagLib::TagLib
-)
+    add_executable(music_formatter src/ui/ui_main.cpp 
+        ${UI_SOURCES}
+        ${MODEL_SOURCES}
+    )
+
+    set_target_properties(music_formatter PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/dbg/gui"
+        RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/build/gui"
+        OUTPUT_NAME "music_formatter_${PROJECT_VERSION}"
+    )
+
+    target_link_libraries(music_formatter 
+        PRIVATE
+            PkgConfig::GTKMM
+            spdlog::spdlog
+            TagLib::TagLib
+    )
+endif(BUILD_GUI)
