--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,61 +7,11 @@ set(APP_HUMAN_NAME "Music Formatter (C++)")
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(TagLib REQUIRED)
-if(NOT TagLib_FOUND)
-    include(FetchContent)
-    FetchContent_Declare(
-        TagLib
-        GIT_REPOSITORY https://github.com/taglib/taglib.git
-        GIT_TAG v2.1.1
-    )
-endif(NOT TagLib_FOUND)
-
-find_package(spdlog REQUIRED)
-if(NOT spdlog_FOUND)
-    include(FetchContent)
-    FetchContent_Declare(
-        spdlog
-        GIT_REPOSITORY https://github.com/gabime/spdlog.git
-        GIT_TAG v1.12.0
-    )
-endif(NOT spdlog_FOUND)
-
-find_package(argparse REQUIRED)
-if(NOT argparse_FOUND)
-    include(FetchContent)
-    FetchContent_Declare(
-        argparse
-        GIT_REPOSITORY https://github.com/p-ranav/argparse.git
-        GIT_TAG v3.0
-    )
-endif(NOT argparse_FOUND)
-
+find_package(TagLib CONFIG REQUIRED)
+find_package(spdlog CONFIG REQUIRED)
+find_package(argparse CONFIG REQUIRED)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(GTKMM REQUIRED IMPORTED_TARGET gtkmm-4.0)
-
-set(GTKMM_TARGET "")
-
-if(TARGET PkgConfig::GTKMM)
-    set(GTKMM_TARGET PkgConfig::GTKMM)
-else()
-    message(WARNING "gtkmm not found via pkg-config — falling back to FetchContent. This may build gtkmm from source and require many dependencies.")
-    include(FetchContent)
-    FetchContent_Declare(
-        gtkmm
-        GIT_REPOSITORY https://gitlab.gnome.org/GNOME/gtkmm.git
-        GIT_TAG 4.10.0
-    )
-    FetchContent_MakeAvailable(gtkmm)
-
-    if(TARGET gtkmm::gtkmm)
-        set(GTKMM_TARGET gtkmm::gtkmm)
-    elseif(TARGET gtkmm-4.0::gtkmm)
-        set(GTKMM_TARGET gtkmm-4.0::gtkmm)
-    else()
-        message(FATAL_ERROR "Unable to determine gtkmm CMake target after FetchContent; inspect the fetched gtkmm targets")
-    endif()
-endif()
 
 find_package(Catch2 QUIET)
 find_package(nlohmann_json 3 QUIET)
